# mcp-jira

./: .env.example  .eslintrc.json  .gitignore  Dockerfile  QUICKSTART.md  README.md  index.js  jest.config.js  package.json  pyproject.toml  setup.py  smithery.yaml  tsconfig.json
src/: index.ts  schemas.ts  server.ts  types.ts
src/__tests__/: server.test.ts
src/mcp_jira/: __init__.py  __main__.py  auth.py  config.py  jira_client.py  mcp_protocol.py  scrum_master.py  server.py  simple_mcp_server.py  types.py
tests/: README.md  conftest.py  test_jira_client.py  test_main.py  test_multi_project.py
