[project]
name = "mcp-jira"
version = "0.1.0"
description = "Model Context Protocol server for Jira with Scrum Master capabilities"
authors = [{name = "Warzuponus"}]
dependencies = [
    "mcp>=1.0.0",
    "jira>=3.5.1",
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
